# Munch

./: .gitignore  Makefile  README.md  makefile  pyproject.toml
Munch/: .gitignore
Munch/Munch/: AnimationView.swift  BreakdownView.swift  CameraView.swift  ContentView.swift  ImageLoadView.swift  ImagePicker.swift  MacrosView.swift  MunchApp.swift  PhotoCaptureView.swift  SelectedImageView.swift  ViewController.swift
Munch/Munch.xcodeproj/: project.pbxproj
Munch/Munch/Model/: Food.swift
Munch/Munch/Services/: APIServices.swift
Munch/Munch/Utility/: CustomErrors.swift
Munch/Munch/View/: ImageLoadVM.swift  ImageLoadView.swift  MacrosVM.swift  NutrientsView.swift
Munch/MunchTests/: MunchTests.swift
Munch/MunchUITests/: MunchUITests.swift  MunchUITestsLaunchTests.swift
api/: .env-sample  .gitignore  app.py  foods.txt
api/data_uploads/: .gitignore  sd.xlsx  sd2.xlsx
api/img_uploads/: .gitignore
app/Munch/: BreakdownVM.swift  Camera.swift  ContentView.swift  ImagePicker.swift  MunchApp.swift  ViewModel.swift
app/Munch.xcodeproj/: project.pbxproj
app/Munch/Model/: Nutrients.swift
app/Munch/Services/: APIServices.swift
app/Munch/Utility/: Extensions.swift
app/Munch/View/: MacrosView.swift  NutrientsVM.swift  NutrientsView.swift
arkit/ARKit_test/ARKit_test/: AppDelegate.swift  ContentView.swift
arkit/ARKit_test/ARKit_test.xcodeproj/: project.pbxproj
backend/: pyproject.toml
backend/macros_backend/flask-api/: .gitignore  app.py
ml/: .gitignore  README.md  clip.py  clip_model.py  clip_test.py  crop_img.py  requirements.txt
(+10 files in other folders)
