[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Ryan <rjl275@cornell.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
flask = "^2.3.3"
neo4j = "^5.12.0"
flask-restful = "^0.3.10"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.0"
clip = {git = "https://github.com/openai/CLIP.git"}
torch = "^2.1.0"
torchvision = "^0.16.0"
ftfy = "^6.1.1"
regex = "^2023.10.3"
tqdm = "^4.66.1"
uuid = "^1.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
